add serializer and some refactoring
